--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="corpo" class="corpo">
         <div class="linha"><input type="text" id="ent" class='inputtask'></div>
         <div id="mylist" class="mylist"></div>
+        <div><textarea id="textexp" class="hidden"></textarea></div>
         <div class="linha"><input id="exp" type="button" value="Exportar"></div>
     </div>
     <script src="aange.js"></script>
