Melhorias na exportação

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div id="corpo" class="corpo">
+        <div id="titulo">MyList</div>
         <div class="linha"><input type="text" id="ent" class='inputtask'></div>
         <div id="mylist" class="mylist"></div>
         <div><textarea id="textexp" class="hidden"></textarea></div>
-        <div class="linha"><input id="exp" type="button" value="Exportar"></div>
+        <div class="linha"><input id="exp" type="button" value="Copiar para Whatsapp"></div>
     </div>
     <script src="aange.js"></script>
     <script src="app.js"></script>
