Iniciado sistema de importação

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="linha"><input type="text" id="ent" class='inputtask'></div>
         <div id="mylist" class="mylist"></div>
         <div><textarea id="textexp" class="hidden"></textarea></div>
+        <div><textarea id="textimp"></textarea><input id="imp" type="button" value="Importar"></div>
         <div class="linha"><input id="exp" type="button" value="Copiar para Whatsapp"></div>
     </div>
     <script src="aange.js"></script>
