Sistema de importação finalizado

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My List</title>
+    <title>MyList</title>
     <link rel="stylesheet" href="style.css">  
 </head>
 <body>
     <div id="corpo" class="corpo">
         <div id="titulo">MyList</div>
-        <div class="linha"><input type="text" id="ent" class='inputtask'></div>
+        <div class="linha"><textarea id="ent" class='inputtask'></textarea></div>
         <div id="mylist" class="mylist"></div>
         <div><textarea id="textexp" class="hidden"></textarea></div>
-        <div><textarea id="textimp"></textarea><input id="imp" type="button" value="Importar"></div>
+        <!-- <div><textarea id="textimp"></textarea><input id="imp" type="button" value="Importar"></div> -->
         <div class="linha"><input id="exp" type="button" value="Copiar para Whatsapp"></div>
     </div>
     <script src="aange.js"></script>
