--- a/index.html
+++ b/index.html
@@ -8,12 +8,21 @@
 </head>
 <body>
     <div id="corpo" class="corpo">
-        <div id="titulo">MyList</div>
-        <div class="linha"><textarea id="ent" class='inputtask'></textarea></div>
+        <header>
+            <div id="titulo">MyList</div>
+            <div class="linha">
+                <input id="exp" type="button" value="Copiar para Whatsapp">
+            </div>
+            <div class="linha">
+                <textarea id="ent" class='inputtask'></textarea>
+                <!-- <input type="button" id="add" value="Add"> -->
+                    <button id="add"></button>
+            </div>
+        </header>
         <div id="mylist" class="mylist"></div>
-        <div><textarea id="textexp" class="hidden"></textarea></div>
-        <!-- <div><textarea id="textimp"></textarea><input id="imp" type="button" value="Importar"></div> -->
-        <div class="linha"><input id="exp" type="button" value="Copiar para Whatsapp"></div>
+        <div>
+            <textarea id="textexp" class="hidden"></textarea>
+        </div>
     </div>
     <script src="aange.js"></script>
     <script src="app.js"></script>
