--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
         <header>
             <div id="titulo">MyList</div>
             <div class="linha">
-                <input id="exp" type="button" value="Copiar para Whatsapp">
+                <input id="exp" type="button" class="button" value="Copiar para Whatsapp">
             </div>
             <div class="linha">
                 <textarea id="ent" class='inputtask'></textarea>
                 <!-- <input type="button" id="add" value="Add"> -->
-                    <button id="add"></button>
-            </div>
+                    <input type="button" class="button" id="add" value="+">
         </header>
         <div id="mylist" class="mylist"></div>
         <div>
