--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MyList</title>
-    <link rel="stylesheet" href="style.css">  
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="webfont.css">
 </head>
 <body>
     <div id="corpo" class="corpo">
@@ -12,7 +13,7 @@
             <div id="titulo">MyList</div>
             <div class="linha">
                 <textarea id="ent" class='inputtask'></textarea>
-                <input type="button" class="button" id="add" value="+">
+                <input type="button" class="button" id="add" value="&#xe043;">
             </div>
         </header>
         <main>
@@ -21,8 +22,8 @@
         </main>
         <footer>
             <div class="linha">
-                <input id="edit" type="button" class="button" value="Editar">
-                <input id="exp" type="button" class="button" value="Copiar">
+                <input id="edit" type="button" class="button" value="&#xe02f;">
+                <input id="copy" type="button" class="button" value="7">
             </div>
         </footer>
     </div>
