Sistema de reordenação

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <header>
             <div id="titulo">MyList</div>
             <div class="linha">
-                <textarea id="ent" class='inputtask'></textarea>
-                <input type="button" class="button" id="add" value="&#xe043;">
+                <input type="text" id="ent" class='inputtask'>
+                <input type="button" class="button" id="add" value="&#xe035;" title="Adicionar">
             </div>
         </header>
         <main>
@@ -22,8 +22,9 @@
         </main>
         <footer>
             <div class="linha">
-                <input id="edit" type="button" class="button" value="&#xe02f;">
-                <input id="copy" type="button" class="button" value="7">
+                <input id="ordem" type="button" class="button" value="&#xe01d;" title="Ordenar">
+                <input id="lixo" type="button" class="button" value="&#xe053;" title="Deletar">
+                <input id="copy" type="button" class="button" value="7" title="Copiar">
             </div>
         </footer>
     </div>
