--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <div id="titulo">MyList</div>
             <div class="linha">
                 <input type="text" id="ent" class='inputtask'>
-                <textarea id="texttemp" class="hidden" placeholder="Cole a sua lista aqui para importá-la."></textarea>
+                <textarea id="textimp" class="hidden" placeholder="Cole a sua lista aqui para importá-la."></textarea>
+                <textarea id="texthid" class="hidden" placeholder="Cole a sua lista aqui para importá-la."></textarea>
                 <input type="button" class="button" id="add" value="&#xe035;" title="Adicionar">
             </div>
         </header>
